--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -30,7 +30,8 @@
   .card-header{
     margin-top: 10px;
     margin-bottom: 10px;
-    max-width: 100px;
+    margin-left: 12%;
+    max-width: 75%;
     height: 30px;
     padding: 1px 1px !important;
     text-align: center;
